@@ -4,6 +4,7 @@
   * Added new page_url_value mehod that is created when you define page_url to return the value
   * Checking the name of accessors to ensure it does not conflict with an existing druid method name
   * Added support for dynamically finding elements inside iframes
+  * Reverted the method name check due to unintended consequences
 === 2017-01-20
 * Enhancements
   * Super called when factory method invoked with non Druid class
